# SHIFT_ML_07

./: README.md  pyproject.toml
src/: baseline.ipynb  baseline.py  feature_choice.ipynb  inference.py  json_validation.py  model.ipynb  row.json  row1.json  stacking_model.pkl
