[project]
name = "shift-2025-07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boruta>=0.4.3",
    "catboost>=1.2.8",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy==2.2.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "streamlit>=1.46.1",
    "xgboost>=3.0.2",
]
